--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-web": "~0.18.7",
+    "react-dom": "18.0.0",
+    "@expo/webpack-config": "^0.17.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-constants": "~13.2.4",
+    "expo-camera": "~12.3.0",
+    "expo-media-library": "~14.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
