--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
         "start": "expo start",
         "android": "expo start --android",
         "ios": "expo start --ios",
-        "web": "expo start --web"
+        "web": "expo start --web",
+        "eas-build-pre-install": "npm config set legacy-peer-deps true"
     },
     "dependencies": {
         "@expo/webpack-config": "^0.17.0",
@@ -20,11 +21,11 @@
         "expo-status-bar": "~1.4.0",
         "react": "18.0.0",
         "react-dom": "18.0.0",
-        "react-native": "0.69.5",
+        "react-native": "0.69.6",
         "react-native-dotenv": "^3.4.2",
-        "react-native-gesture-handler": "^2.8.0",
+        "react-native-gesture-handler": "~2.5.0",
         "react-native-picker-select": "^8.0.4",
-        "react-native-safe-area-context": "^4.4.1",
+        "react-native-safe-area-context": "4.3.1",
         "react-navigation": "^4.4.4",
         "react-navigation-stack": "^2.10.4"
     },
