--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,36 @@
 {
-    "name": "foodtracker",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "eas-build-pre-install": "npm config set legacy-peer-deps true"
-    },
-    "dependencies": {
-        "@expo/webpack-config": "^0.17.0",
-        "@react-native-picker/picker": "2.4.2",
-        "axios": "^1.1.3",
-        "expo": "~46.0.9",
-        "expo-camera": "~12.3.0",
-        "expo-constants": "~13.2.4",
-        "expo-image-picker": "~13.3.1",
-        "expo-media-library": "~14.2.0",
-        "expo-status-bar": "~1.4.0",
-        "react": "18.0.0",
-        "react-dom": "18.0.0",
-        "react-native": "0.69.6",
-        "react-native-dotenv": "^3.4.2",
-        "react-native-gesture-handler": "~2.5.0",
-        "react-native-picker-select": "^8.0.4",
-        "react-native-safe-area-context": "4.3.1",
-        "react-navigation": "^4.4.4",
-        "react-navigation-stack": "^2.10.4"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9"
-    },
-    "private": true
+  "name": "foodtracker",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eas-build-pre-install": "npm config set legacy-peer-deps true"
+  },
+  "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-picker/picker": "^2.4.2",
+    "axios": "^1.1.3",
+    "expo": "~46.0.9",
+    "expo-camera": "~12.3.0",
+    "expo-constants": "~13.2.4",
+    "expo-image-picker": "~13.3.1",
+    "expo-media-library": "~14.2.0",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-dotenv": "^3.4.2",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-safe-area-context": "4.3.1",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9"
+  },
+  "private": true
 }
