--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
         "react-native-dotenv": "^3.4.2",
         "react-native-gesture-handler": "~2.5.0",
         "react-native-picker-select": "^8.0.4",
+        "react-native-root-toast": "^3.3.1",
         "react-native-safe-area-context": "4.3.1",
         "react-navigation": "^4.4.4",
         "react-navigation-stack": "^2.10.4"
