--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,5 +34,8 @@
     "devDependencies": {
         "@babel/core": "^7.12.9"
     },
-    "private": true
+    "private": true,
+    "expo": {
+        "jsEngine": "hermes"
+    }
 }
