--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-root-toast": "^3.3.1",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "react-native-unordered-list": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
