--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "FoodTracker",
-    "slug": "FoodTracker",
-    "version": "1.0.0",
+    "name": "DeepDishes",
+    "slug": "DeepDishes",
+    "version": "0.1.0",
     "orientation": "portrait",
     "icon": "./app/assets/icon.png",
     "userInterfaceStyle": "light",
@@ -15,7 +15,7 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
+          "photosPermission": "Your photo will be sent to our server (if running) to be analyzed. It will NOT be stored."
         }
       ],
       [
@@ -28,7 +28,8 @@
       ]
     ],
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/5813ac9f-7632-41e7-a3f1-a08de2676097"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -37,14 +38,16 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Allow $(PRODUCT_NAME) to access your photos.",
-        "NSPhotoLibraryAddUsageDescription": "Allow $(PRODUCT_NAME) to save photos."
+        "NSPhotoLibraryAddUsageDescription": "Allow $(PRODUCT_NAME) to save photos.",
+        "NSCameraUsageDescription": "Your photo will be sent to our server (if running) to be analyzed. It will NOT be stored."
       },
-      "bundleIdentifier": "com.projeffboy.FoodTracker"
+      "bundleIdentifier": "com.projeffboy.DeepDishes",
+      "buildNumber": "2"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./app/assets/icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#EEEEEE"
       },
       "permissions": [
         "android.permission.RECORD_AUDIO",
@@ -52,15 +55,18 @@
         "android.permission.WRITE_EXTERNAL_STORAGE",
         "android.permission.ACCESS_MEDIA_LOCATION"
       ],
-      "package": "com.projeffboy.FoodTracker"
+      "package": "com.projeffboy.DeepDishes"
     },
     "web": {
       "favicon": "./app/assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "3e5ec294-434b-4580-ad70-849cbce08be4"
+        "projectId": "5813ac9f-7632-41e7-a3f1-a08de2676097"
       }
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
     }
   }
 }
