--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "foodtracker",
-  "version": "1.0.0",
+  "name": "deepdishes",
+  "version": "0.1.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -31,7 +31,8 @@
     "react-native-root-toast": "^3.3.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-unordered-list": "^1.0.4"
+    "react-native-unordered-list": "^1.0.4",
+    "expo-updates": "~0.14.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
