get the api key working in production

--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -17,7 +17,11 @@
             },
             "distribution": "internal"
         },
-        "production": {}
+        "production": {
+            "env": {
+                "API_KEY": "wypfPDS0hGT0tCQDPQWYQ32mUgT1OKmpWvTskcwC"
+            }
+        }
     },
     "submit": {
         "production": {}
