--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@expo/webpack-config": "^0.17.0",
         "@react-native-async-storage/async-storage": "~1.17.3",
         "@react-native-picker/picker": "^2.4.2",
+        "@react-navigation/bottom-tabs": "^6.4.3",
         "@react-navigation/native": "^6.0.16",
         "@react-navigation/native-stack": "^6.9.4",
         "axios": "^1.1.3",
@@ -22,6 +23,7 @@
         "expo-image-picker": "~13.3.1",
         "expo-media-library": "~14.2.0",
         "expo-status-bar": "~1.4.0",
+        "expo-updates": "~0.14.7",
         "react": "18.0.0",
         "react-dom": "18.0.0",
         "react-native": "0.69.6",
@@ -31,15 +33,11 @@
         "react-native-root-toast": "^3.3.1",
         "react-native-safe-area-context": "4.3.1",
         "react-native-screens": "~3.15.0",
-        "react-native-unordered-list": "^1.0.4",
-        "expo-updates": "~0.14.7"
+        "react-native-unordered-list": "^1.0.4"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
         "babel-plugin-module-resolver": "^4.1.0"
     },
-    "private": true,
-    "expo": {
-        "jsEngine": "hermes"
-    }
+    "private": true
 }
